Mall-MicroService/infra-services-with-prometheus/01-Nacos/04-nacos-persistent.yaml
# Maintainer: MageEdu <mage@magedu.com>
# Site: http://www.magedu.com
# Nacos Cluster
---
apiVersion: v1
kind: Service
metadata:
  name: nacos-headless
  labels:
    app: nacos
spec:
  publishNotReadyAddresses: true 
  ports:
    - port: 8848
      name: server
      targetPort: 8848
    - port: 9848
      name: client-rpc
      targetPort: 9848
    - port: 9849
      name: raft-rpc
      targetPort: 9849
    ## 兼容1.4.x版本的选举端口
    - port: 7848
      name: old-raft-rpc
      targetPort: 7848
  clusterIP: None
  selector:
    app: nacos
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nacos
spec:
  podManagementPolicy: Parallel
  serviceName: nacos-headless
  replicas: 3
  selector:
    matchLabels:
      app: nacos
  template:
    metadata:
      labels:
        app: nacos
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
        prometheus.io/scrape: "true"
        prometheus.io/port: "8848"
        prometheus.io/path: "/nacos/actuator/prometheus"
    spec:
      containers:
        - name: nacos
          imagePullPolicy: Always
          #image: registry.magedu.com/nacos/nacos-server:v2.2.3-slim
          image: nacos/nacos-server:v2.3.1-slim
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
          ports:
            - containerPort: 8848
              name: client-port
            - containerPort: 9848
              name: client-rpc
            - containerPort: 9849
              name: raft-rpc
            - containerPort: 7848
              name: old-raft-rpc
          volumeMounts:
            - name: properties
              mountPath: /home/nacos/conf/application.properties
              subPath: application.properties
            - name: data
              mountPath: /home/nacos/plugins/peer-finder
              subPath: peer-finder
            - name: data
              mountPath: /home/nacos/data
              subPath: data
            - name: data
              mountPath: /home/nacos/logs
              subPath: logs
      volumes:
        - name: properties
          configMap:
            name: nacos-cfg
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteMany" ]
        # Modify StorageClass before deployment.
        storageClassName: "openebs-hostpath"
        resources:
          requests:
            storage: 10Gi
---
