Mall-MicroService/infra-services-with-prometheus/01-Nacos/06-nacos-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nacos
  annotations:
    ingress.cilium.io/loadbalancer-mode: 'shared'
    ingress.cilium.io/service-type: 'Loadbalancer'
spec:
  #ingressClassName: cilium
  ingressClassName: nginx
  rules:
  - host: nacos.magedu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nacos
            port: 
              number: 8848
